New Database, new Config , etc

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile "org.springframework:spring-web"
     compile "postgresql:postgresql:9.1-901-1.jdbc4"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-devtools"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
